Fix Logo ids and slider styling
Add id="title" to logos.
Change slider to height:100% to prevent overlap.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -626,7 +626,7 @@ footer {
 }
 
 .slider {
-	height: 1.5em;
+	height: 100%;
 	width: 3em;
 	float: right;
 	margin-left: 1em;
